syntax = "proto3";

package user_product;

option csharp_namespace = "Parstech.Shop.Shared.Protos.UserProduct";

service UserProductService {
  rpc CreateUserProduct (CreateUserProductRequest) returns (UserProductResponse) {}
  rpc DeleteUserProduct (DeleteUserProductRequest) returns (UserProductResponse) {}
  rpc GetUserProducts (GetUserProductsRequest) returns (GetUserProductsResponse) {}
}

message CreateUserProductRequest {
  string user_name = 1;
  int32 product_id = 2;
  string type = 3; // "Favorite" or "Compare"
}

message DeleteUserProductRequest {
  int32 user_product_id = 1;
}

message GetUserProductsRequest {
  string user_name = 1;
  string type = 2;
}

message UserProductResponse {
  bool success = 1;
  string message = 2;
  optional UserProduct data = 3;
}

message GetUserProductsResponse {
  repeated UserProduct products = 1;
}

message UserProduct {
  int32 id = 1;
  string user_name = 2;
  int32 product_id = 3;
  string type = 4;
  string product_name = 5;
  double price = 6;
  string image = 7;
  string created_at = 8;
} 